--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 altair==5.2.0
+holidays==0.40
 matplotlib==3.8.2
 numpy==1.26.3
 pandas==2.1.4
+scikit_learn==1.3.2
 seaborn==0.13.1
 streamlit==1.29.0
+xgboost==2.0.3
